fix z-index again

--- a/src/components/Form/DatePickers/SingleDatePicker/SingleDatePicker.scss
+++ b/src/components/Form/DatePickers/SingleDatePicker/SingleDatePicker.scss
@@ -141,6 +141,7 @@
   pointer-events: none;
   user-select: none;
   color: $grey_2;
+  z-index: 1;
 
   &.small {
     top: 16px;
@@ -153,6 +154,7 @@
       transform: scale(0.875) translate(0px, -25px);
       transform-origin: left top 0px;
       pointer-events: none;
+      z-index: 2;
 
       &.small {
         top: 24px;
